GNOME Bugzilla – Bug 680162
[0.11] libvisual visualisations don't work
Last modified: 2012-07-24 10:26:53 UTC
(1) cd gst-plugins-base/tests/examples/playback $ ./playback-test 0 file:///path/to/foo.flac (2) open 'playbin options' section via arrow, enable [x] vis checkbox, select libvisual visualisation, e.g. corona (3) press PLAY button Endless stream of these, no image: ** (lt-playback-test:20375): CRITICAL **: gst_video_info_from_caps: assertion `gst_caps_is_fixed (caps)' failed (lt-playback-test:20375): GStreamer-CRITICAL **: gst_buffer_pool_config_set_params: assertion `caps == NULL || gst_caps_is_fixed (caps)' failed ** (lt-playback-test:20375): CRITICAL **: gst_adapter_map: assertion `size > 0' failed
commit cdbd97a43d9c2bddaddf951f3dd7397a1d51312b Author: Wim Taymans <wim.taymans@collabora.co.uk> Date: Tue Jul 24 12:25:08 2012 +0200 audiovisualizer: fixate caps completely Call gst_caps_fixate() to make sure that the caps are completely fixated before using them as the final caps in negotiation. Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680162